RESOLVED FIXED273183
Spurious assertion after direct call data ic on 32 bits
https://bugs.webkit.org/show_bug.cgi?id=273183
Summary Spurious assertion after direct call data ic on 32 bits
Justin Michaud
Reported 2024-04-24 06:05:47 PDT
Spurious assertion after direct call data ic on 32 bits
Attachments
Justin Michaud
Comment 1 2024-04-24 06:18:42 PDT
EWS
Comment 2 2024-04-25 06:52:09 PDT
Committed 277977@main (7f93c606efcc): <https://commits.webkit.org/277977@main> Reviewed commits have been landed. Closing PR #27688 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-25 06:53:15 PDT
Note You need to log in before you can comment on or make changes to this bug.